--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html>
     <head>
         <title>document</title>
-        <meta charset="utf 8">
+        <meta charset="utf-8">
     </head>
     <body>
         <h1><center>Sociological survey</center></h1>
 
 
-<form name="test" method="post" action="https://formspree.io/legioner.ukr@gmail.com" >
+<form name="test" method="post" action="https://formspree.io/legioner.ukr@gmail.com">
   <p><b>Your name:</b><br>
    <input type="text" name="name" size="30" autocomplete="on">
   </p>
