--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1><center>Sociological survey</center></h1>
 
 
-<form name="test" method="post" action="https://formspree.io/legioner.ukr@gmail.com">
+<form name="test" method="post" autocomplete="on" action="https://formspree.io/legioner.ukr@gmail.com">
   <p><b>Your name:</b><br>
    <input type="text" name="name" size="30" autocomplete="on">
   </p>
@@ -31,7 +31,7 @@
     <option value="other">other</option>
    </select>
    <p><b>Your E-mail</b></p>
-   <input type="email" name="email" size="30" autocomplete="on">
+   <input type="email" name="email" size="30" >
    
    <p><b>Comment</b><Br>
    <textarea name="comment" cols="40" rows="3" autocomplete="on" ></textarea></p>
