--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 
 
 <form name="test" method="post" autocomplete="on" action="https://formspree.io/legioner.ukr@gmail.com">
-  <p><b>Your name:</b><br>
-   <input type="text" name="name" size="30" autocomplete="on">
-  </p>
+  <label><p><b>Your name:(required)</b><br>
+   <input type="text" name="name" size="30" autocomplete="on" required>
+  </p></label>
   <p><b>Your sex:</b><Br>
-   <input type="radio" name="sex" value="male"> male<Br>
-   <input type="radio" name="sex" value="female"> female<Br>
-   <input type="radio" name="sex" value="other"> other<Br>
+  <label><input type="radio" name="sex" value="male"> male</label><Br>
+   <label><input type="radio" name="sex" value="female"> female</label><Br>
+   <label><input type="radio" name="sex" value="other"> other</label><Br>
   </p>
   
-   <p><b>Birthday</b></p>
+   <p><b>Birthday:</b></p>
    <p><input type="date" name="bday" min="1940-01-01" max="2006-01-01"></p>
-   <p><b>Your favourite color</b></p>
+   <p><b>Your favourite color:</b></p>
    <p><input type="color" name="favcolor"></p>
-   <p><b>Your native country</b></p>
+   <p><b>Your native country:</b></p>
    
    <select name="Countrynative" id="nativecountry">
     <option value="Ukraine">Ukraine</option>
@@ -30,11 +30,11 @@
     <option value="Belarus">Belarus</option>
     <option value="other">other</option>
    </select>
-   <p><b>Your E-mail</b></p>
-   <input type="email" name="email" size="30" >
+   <label><p><b>Your E-mail:(required)</b></p>
+   <input type="email" name="email" size="30" required></label>
    
-   <p><b>Comment</b><Br>
-   <textarea name="comment" cols="40" rows="3" autocomplete="on" ></textarea></p>
+   <label><p><b>Comment</b><Br>
+   <textarea name="comment" cols="40" rows="3" autocomplete="on" ></textarea></p></label>
    <p><input type="submit" value="Send">
    <input type="reset" value="Delete"></p>
  </form>
